{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 37,
  "lineage": "f7226522-78a2-de9d-a9c5-54cfbf2978f5",
  "resources": [
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0406f427e3392290f",
            "association_id": "eipassoc-06a8d68ea4dde91bf",
            "domain": "vpc",
            "id": "eipalloc-0406f427e3392290f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0808118334961cbcc",
            "private_dns": "ip-10-0-5-36.ec2.internal",
            "private_ip": "10.0.5.36",
            "public_dns": "ec2-34-233-163-237.compute-1.amazonaws.com",
            "public_ip": "34.233.163.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:internet-gateway/igw-067e57cfe8859f302",
            "id": "igw-067e57cfe8859f302",
            "owner_id": "875922239406",
            "tags": {
              "Name": "Tech-igw"
            },
            "tags_all": {
              "Name": "Tech-igw"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0406f427e3392290f",
            "connectivity_type": "public",
            "id": "nat-09fa7dc3afa0f748f",
            "network_interface_id": "eni-0808118334961cbcc",
            "private_ip": "10.0.5.36",
            "public_ip": "34.233.163.237",
            "subnet_id": "subnet-0912fa1d54cdf65cf",
            "tags": {
              "Name": "Tech-Nat_Gateway"
            },
            "tags_all": {
              "Name": "Tech-Nat_Gateway"
            }
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.gateway_eip",
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:route-table/rtb-0f9111065fec52d72",
            "id": "rtb-0f9111065fec52d72",
            "owner_id": "875922239406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09fa7dc3afa0f748f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tech-private_route_table"
            },
            "tags_all": {
              "Name": "Tech-private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_eip.gateway_eip",
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_nat_gateway.nat_gateway",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:route-table/rtb-0ca5e77c96ec96042",
            "id": "rtb-0ca5e77c96ec96042",
            "owner_id": "875922239406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067e57cfe8859f302",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tech-public_route_table"
            },
            "tags_all": {
              "Name": "Tech-public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd42412969c0438f",
            "route_table_id": "rtb-0f9111065fec52d72",
            "subnet_id": "subnet-0605478a65eaea4a8"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.gateway_eip",
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_nat_gateway.nat_gateway",
            "module.prod_vpc.aws_route_table.private_route_table",
            "module.prod_vpc.aws_subnet.private_app_subnet_az1",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f521800020c0792",
            "route_table_id": "rtb-0f9111065fec52d72",
            "subnet_id": "subnet-057fb4529dc644e11"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.gateway_eip",
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_nat_gateway.nat_gateway",
            "module.prod_vpc.aws_route_table.private_route_table",
            "module.prod_vpc.aws_subnet.private_app_subnet_az2",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094de25e77d2e3d7f",
            "route_table_id": "rtb-0f9111065fec52d72",
            "subnet_id": "subnet-016367e8246c54f10"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.gateway_eip",
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_nat_gateway.nat_gateway",
            "module.prod_vpc.aws_route_table.private_route_table",
            "module.prod_vpc.aws_subnet.private_data_subnet_az1",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcb5904b14ee9e7a",
            "route_table_id": "rtb-0f9111065fec52d72",
            "subnet_id": "subnet-041503f17e26d90b7"
          },
          "dependencies": [
            "module.prod_vpc.aws_eip.gateway_eip",
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_nat_gateway.nat_gateway",
            "module.prod_vpc.aws_route_table.private_route_table",
            "module.prod_vpc.aws_subnet.private_data_subnet_az2",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f5bff813e4980ae",
            "route_table_id": "rtb-0ca5e77c96ec96042",
            "subnet_id": "subnet-0912fa1d54cdf65cf"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_route_table.public_route_table",
            "module.prod_vpc.aws_subnet.public_subnet_az1",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a1f2ed15173d6fd",
            "route_table_id": "rtb-0ca5e77c96ec96042",
            "subnet_id": "subnet-0175ff30c35973202"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.internet_gateway",
            "module.prod_vpc.aws_route_table.public_route_table",
            "module.prod_vpc.aws_subnet.public_subnet_az2",
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:subnet/subnet-0605478a65eaea4a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0605478a65eaea4a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875922239406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech-Private_app_subnet_az1"
            },
            "tags_all": {
              "Name": "Tech-Private_app_subnet_az1"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:subnet/subnet-057fb4529dc644e11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057fb4529dc644e11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875922239406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech-private_app_subnet_az2"
            },
            "tags_all": {
              "Name": "Tech-private_app_subnet_az2"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:subnet/subnet-016367e8246c54f10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016367e8246c54f10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875922239406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech-private_data_subnet_az1"
            },
            "tags_all": {
              "Name": "Tech-private_data_subnet_az1"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:subnet/subnet-041503f17e26d90b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041503f17e26d90b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875922239406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech-Private_data_subnet_az2"
            },
            "tags_all": {
              "Name": "Tech-Private_data_subnet_az2"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:subnet/subnet-0912fa1d54cdf65cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0912fa1d54cdf65cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "875922239406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech-public_subnet_az1"
            },
            "tags_all": {
              "Name": "Tech-public_subnet_az1"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:subnet/subnet-0175ff30c35973202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0175ff30c35973202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "875922239406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech-public_subnet_az2"
            },
            "tags_all": {
              "Name": "Tech-public_subnet_az2"
            },
            "vpc_id": "vpc-0d142d8e85e6586f9"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc",
            "module.prod_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875922239406:vpc/vpc-0d142d8e85e6586f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bce3cfb3ea284be",
            "default_route_table_id": "rtb-00991c1ada9588906",
            "default_security_group_id": "sg-096999fc8ec8d1199",
            "dhcp_options_id": "dopt-074fcbe171e4ebcb7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d142d8e85e6586f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00991c1ada9588906",
            "owner_id": "875922239406",
            "tags": {
              "Name": "Tech-vpc"
            },
            "tags_all": {
              "Name": "Tech-vpc"
            }
          }
        }
      ]
    }
  ]
}